--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>spring-security-demo</finalName>
+		<finalName>spring-security</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
